tests/NormalTests/paczka1/fuzzy1/85686140.err
Error in line 9: s4DE9 A778 -4,7
Error in line 1: Ztvg6ExfmcD S651 95,6
Error in line 10: Ztvg6ExfmcD A778 22,1
Error in line 12: Ztvg6ExfmcD A485 -4,9
Error in line 5: aMv9kQ8S A485 60,1
Error in line 26: Ztvg6ExfmcD A485 197,4
